--- a/package.json
+++ b/package.json
@@ -11,10 +11,18 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-redux": "^7.1.26",
+    "@types/react-router-dom": "^5.3.3",
+    "antd": "^5.9.0",
     "axios": "^1.5.0",
+    "formik": "^2.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
